# OpenBB

openbb_platform/extensions/portfolio/: README.md  pyproject.toml
openbb_platform/extensions/portfolio/openbb_portfolio/: __init__.py  engine.py
openbb_platform/extensions/portfolio/openbb_portfolio/allocation/: __init__.py  allocation_router.py
openbb_platform/extensions/portfolio/openbb_portfolio/metrics/: __init__.py  helpers.py  metrics_router.py
openbb_platform/extensions/portfolio/openbb_portfolio/optimizers/: __int__.py  optimizers_router.py
openbb_platform/extensions/portfolio/openbb_portfolio/risk/: __init__.py  risk_router.py
