[tool.poetry]
name = "openbb-portfolio"
version = "0.1.0a4"
description = "Portfolio for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_portfolio" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
openbb-core = "^1.0.0b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
forecast = "openbb_portfolio.portfolio_router:router"
